# compositional-reasoning-finetuning

./: .gitignore  BART_fine-tune.ipynb  Evaluation - Richard.ipynb  Evaluation.ipynb  Finetune_Alpaca_LoRa.ipynb  Finetune_OPT.ipynb  LICENSE  Per-Question Results.csv  README.md  Untitled document.gdoc  alpaca-lora finetune.ipynb  alpaca-lora_preprocess.ipynb  analysis.py  analyze_splits.ipynb  compositional-reasoning-paper-2.gdoc  data_adaptor.py  data_exploration.ipynb  data_generation.py  data_loaders.py  data_preprocess_BART.ipynb  evaluation.py  finetune-OPT.ipynb  finetuning-status-analysis-aw.ipynb  finetuning-status-analysis-descriptive-statistics.ipynb  finetuning-status-analysis.ipynb  finetuning-status-attention-analysis.ipynb  fixtures.ipynb  fixtures.json  flan-t5-self-ask-context-size.csv  flan-t5-small-baseline-with-examplars-examples.md  flan-t5-small-self-ask-with-examplars-examples.md  flan-t5-small-train.ipynb  hot_pot_dataset_exploration.ipynb  opanai_api.ipynb  pyproject.toml  run_evaluation.sh  self-ask-direct-analysis-richard.ipynb  super_natural_instructions_dataset_exploration.ipynb  t5-direct-context-size.csv  t5-small-direct-finetune.ipynb  (+11 more)
data/2WikiMultihopQA/: opeanai_api_sample.jsonl  self_ask_examplars.txt
data/FinetuningData/: chain_of_thought_examplars.txt
data/MultihopEvaluation/: README.md
data/Super-NaturalInstructions/: Task List.xlsx  ~$Task List.xlsx
samples/: flan-t5-self-ask-with-examplars.md  opt-125m-with-examplars.md  t5-self-ask-with-examplars.md  t5-small-direct-without-examplars-examples.md
wandb/: latest-run
(+9 files in other folders)
